examples/test/testpolicy89.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy89
  namespace: namespace1
spec:
  podSelector:
    matchLabels:
      key33: value44
      key0: value33
      key48: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value42
      podSelector:
        matchLabels:
          key30: value44
          key44: value33
